2023-03-09  Karl Berry  <karl@tug.org>
	* TL'23 release.

2023-01-19 Luigi Scarso <luigi.scarso@gmail.com>
    * MetaPost: svg->dx, svg->dy are now double (better precision) .

2022-07-31 Luigi Scarso <luigi.scarso@gmail.com>
    * MetaPost: Working on the file extension (work in progress).

2022-05-28  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

        * mp.w: Typo.

2022-05-23  Luigi Scarso <luigi.scarso@gmail.com>
    * Fixed mp_begin_iteration (H.Hagen)

2022-05-15  Luigi Scarso <luigi.scarso@gmail.com>
    * Fixed a memory leak in mplib (H.Hagen)

2022-03-21  Karl Berry  <karl@tug.org>
	* TL'22 release.

2022-01-19  Luigi Scarso  <luigi.scarso@gmail.com>
	* mp.w: MetaPost 2.02 (twice).

2022-01-10  Karl Berry  <karl@freefriends.org>

	* am/libmplib.am,
	* am/mplib.am: do not silence tangle-sh.

2021-05-09  Luigi Scarso  <luigi.scarso@gmail.com>
	* Impose mp->stack_size < 1001 in @d push_input to avoid stack overflow 
          due infinite recursion of macro expansion (thanks to A. Kakuto).

2021-04-10  Luigi Scarso  <luigi.scarso@gmail.com>
	* Metapost version 2.01 (needed to mark the patch mpx_copy_mpto).

2021-04-02  Luigi Scarso  <luigi.scarso@gmail.com>
	* Revert the patch in mpx_copy_mpto, it was wrong in tex mode. Added a check if in troff mode.

2021-03-23 Karl Berry <karl@tug.org>
	* TL'21.

2020-12-28  Luigi Scarso  <luigi.scarso@gmail.com>
	* Temp, fix in mpx_copy_mpto, changed || with && to avoid a wrong final %

2020-12-27  Luigi Scarso  <luigi.scarso@gmail.com>
	* Fixed some typos in manual (thank to 胡亚捷 (Hu Yajie) )
	* Added the undocumented -T option
	* Added  some autotools files to make reautoconf working again

2020-11-26  Luigi Scarso  <luigi.scarso@gmail.com>
	* Added mp-tangle dependency to libmplib.am
	  to fix parallel compilation

2020-08-21  Luigi Scarso  <luigi.scarso@gmail.com>
	* Changed epsilon in binary and decimal mode from 1E-52 to
          2^-173 =~0.835E-52, so that mp_solve_rising_cubic now works as
          expected.