@@ -4,11 +4,15 @@
 # Copyright 2014 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
-./upmpost -version || exit 1
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_upmpost=$BinDir/upmpost$ExeExt
 
-./upmpost -help || exit 1
+$_upmpost -version || exit 1
 
-./upmpost -dvitomp -version || exit 1
+$_upmpost -help || exit 2
 
-./upmpost -dvitomp -help || exit 1
+$_upmpost -dvitomp -version || exit 3
+
+$_upmpost -dvitomp -help || exit 4
 
