@@ -4,6 +4,11 @@
 # Copyright 2014 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_upmpost=$BinDir/upmpost$ExeExt
+_euptex=$BinDir/euptex$ExeExt
+
 LC_ALL=C; export LC_ALL;  LANGUAGE=C; export LANGUAGE
 
 tests=pmpostdir/tests
@@ -29,14 +34,14 @@ VFFONTS="$srcdir/$tests;`dirname $vfpath`"
 
 export TEXMFCNF TFMFONTS MPINPUTS TEXFONTMAPS T1FONTS VFFONTS
 
-# check that we have euptex at all. 
-euptex -version >/dev/null 2>&1 || exit 77
+# check that we have euptex at all.
+$_euptex -version >/dev/null 2>&1 || exit 77
 
-# ensure that euptex.fmt exists and can be read. 
-euptex \\end >/dev/null 2>&1 || exit 77 
+# ensure that euptex.fmt exists and can be read.
+$_euptex \\end >/dev/null 2>&1 || exit 77
 
 echo 'input plain;' >upmpsamp.mp
 cat "$srcdir/$tests/psample.mp" >>upmpsamp.mp
 
-./upmpost -ini -tex=euptex upmpsamp || exit 1
+$_upmpost -ini -tex=euptex upmpsamp || exit 1
 
