@@ -1,3 +1,8 @@
+2023-08-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* {dvitomp,mptraptest}.test:
+	Make easier to test on Windows.
+
 2023-03-09  Karl Berry  <karl@tug.org>
 	* TL'23 release.
 
